--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             </footer>           
         </div>
         
-        <footer>
+        <div>
             <button class="center">
                 <img class="center" src="./images/icon-dice.svg" alt="dice randomizer button">
             </button>
-        </footer>
+        </div>
     <script src="./main.js"></script>
 </body>
 </html>
